--- a/index.html
+++ b/index.html
@@ -3,72 +3,68 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suites IKE</title>
+  <title>Aegina Suite IKE</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Avenir+Next&family=Circular&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <nav class="navbar frosted-glass">
-    <ul class="menu circular-menu">
-      <li><a href="#home" class="menu-link">Home</a></li>
-      <li><a href="#about" class="menu-link">About Us</a></li>
-      <li><a href="#team" class="menu-link">Our Team</a></li>
-      <li><a href="#report" class="menu-link">Report</a></li>
-    </ul>
+  <nav class="navbar">
+    <div class="container nav-container">
+      <div class="logo">Aegina Suite IKE</div>
+      <ul class="nav-links">
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#team">Our Team</a></li>
+        <li><a href="#report">Report</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <header id="home" class="hero-section">
-    <h1 class="main-title">
-      Property Management in the
-      <span class="highlighted-circle">Saronic Gulf</span>
-    </h1>
-    <p class="subtitle">Currently delivering boutique luxury experiences in Aegina</p>
+  <header class="hero">
+    <div class="container">
+      <h1>Property Management in the Saronic Gulf</h1>
+      <p>Experience seamless property management with Aegina Suite IKE.</p>
+    </div>
   </header>
 
-  <section id="about" class="section about-section frosted-glass">
-    <h2 class="section-title">About Us</h2>
-    <p>
-      Aegina Suites IKE is a premium property management company specializing in boutique luxury experiences within Aegina. Our projects are designed to stand out in both form and function.
-    </p>
-    <p>
-      We believe that true luxury lies in thoughtful details, seamless service, and exclusive locality — and we bring all three together in the heart of the Saronic Gulf.
-    </p>
-  </section>
+  <main class="main-content container">
+    <section id="about" class="section about">
+      <h2>About Us</h2>
+      <p>
+        Aegina Suite IKE is a premier property management company focused on delivering personalized and trustworthy services in the Saronic Gulf. We specialize in maximizing property value and ensuring tenant satisfaction.
+      </p>
+    </section>
 
-  <section id="team" class="section team-section frosted-glass">
-    <h2 class="section-title">Our Team</h2>
-    <div class="team-cards">
-      <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="panagiotis-info" data-member="panagiotis">
-        <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
-        <p class="team-role">CEO & Co-founder</p>
-        <div class="team-info" id="panagiotis-info" hidden>
-          <p>Panagiotis has 15 years of experience in property management and leads the company with strategic vision.</p>
+    <section id="team" class="section team">
+      <h2>Our Team</h2>
+      <div class="team-cards">
+        <div class="card">
+          <div class="avatar">PM</div>
+          <h3>Panagiotis Markidis</h3>
+          <p>CEO & Co-Founder</p>
+        </div>
+        <div class="card">
+          <div class="avatar">CE</div>
+          <h3>Christina Economopoulou</h3>
+          <p>COO & Co-Founder</p>
         </div>
       </div>
+    </section>
 
-      <div class="team-card" tabindex="0" role="button" aria-expanded="false" aria-controls="christina-info" data-member="christina">
-        <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
-        <p class="team-role">COO & Co-founder</p>
-        <div class="team-info" id="christina-info" hidden>
-          <p>Christina oversees operations and ensures excellence in service delivery across all properties.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+    <section id="report" class="section report">
+      <h2>Annual Earnings Report</h2>
+      <a href="annual_earnings_report.pdf" download class="btn-download">Download Report</a>
+    </section>
+  </main>
 
-  <section id="report" class="section report-section frosted-glass">
-    <h2 class="section-title">Annual Earnings Report</h2>
-    <a href="annual-earnings-report.pdf" download class="download-btn" aria-label="Download Annual Earnings Report">Download Report</a>
-    <p class="report-description">
-      Our most recent annual report reflects record growth in boutique hospitality investments across Aegina.
-    </p>
+  <section id="animation-canvas">
+    <canvas id="three-canvas"></canvas>
   </section>
 
   <footer class="footer">
-    <p>© 2025 Aegina Suites IKE. All rights reserved.</p>
+    &copy; 2025 Aegina Suite IKE — All rights reserved.
   </footer>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r154/three.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
-
