--- a/index.html
+++ b/index.html
@@ -3,68 +3,80 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suite IKE</title>
+  <title>Aegina Suite Ike | Luxury Property Management</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <!-- GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <!-- Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="container nav-container">
-      <div class="logo">Aegina Suite IKE</div>
-      <ul class="nav-links">
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#team">Our Team</a></li>
-        <li><a href="#report">Report</a></li>
+
+  <nav class="navbar" role="navigation" aria-label="Primary Navigation">
+    <div class="nav-container">
+      <a href="#" class="logo" aria-label="Aegina Suite Ike homepage">Aegina Suite Ike</a>
+      <ul class="nav-menu">
+        <li><a href="#hero" tabindex="0">Home</a></li>
+        <li><a href="#about" tabindex="0">About</a></li>
+        <li><a href="#team" tabindex="0">Team</a></li>
+        <li><a href="#report" tabindex="0">Report</a></li>
       </ul>
     </div>
   </nav>
 
-  <header class="hero">
-    <div class="container">
-      <h1>Property Management in the Saronic Gulf</h1>
-      <p>Experience seamless property management with Aegina Suite IKE.</p>
+  <!-- Hero Section -->
+  <section id="hero" class="hero-section" aria-label="Introduction">
+    <canvas id="hero-canvas" aria-hidden="true"></canvas>
+    <div class="hero-content">
+      <h1 class="hero-title">Property Management in the Saronic Gulf</h1>
+      <p class="hero-subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
+      <a href="#about" class="btn-primary" aria-label="Learn more about us">Learn More</a>
     </div>
-  </header>
-
-  <main class="main-content container">
-    <section id="about" class="section about">
-      <h2>About Us</h2>
-      <p>
-        Aegina Suite IKE is a premier property management company focused on delivering personalized and trustworthy services in the Saronic Gulf. We specialize in maximizing property value and ensuring tenant satisfaction.
-      </p>
-    </section>
-
-    <section id="team" class="section team">
-      <h2>Our Team</h2>
-      <div class="team-cards">
-        <div class="card">
-          <div class="avatar">PM</div>
-          <h3>Panagiotis Markidis</h3>
-          <p>CEO & Co-Founder</p>
-        </div>
-        <div class="card">
-          <div class="avatar">CE</div>
-          <h3>Christina Economopoulou</h3>
-          <p>COO & Co-Founder</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="report" class="section report">
-      <h2>Annual Earnings Report</h2>
-      <a href="annual_earnings_report.pdf" download class="btn-download">Download Report</a>
-    </section>
-  </main>
-
-  <section id="animation-canvas">
-    <canvas id="three-canvas"></canvas>
   </section>
 
-  <footer class="footer">
-    &copy; 2025 Aegina Suite IKE — All rights reserved.
-  </footer>
+  <!-- About Section -->
+  <section id="about" class="content-section" tabindex="-1" aria-labelledby="about-heading">
+    <hr class="section-separator" />
+    <h2 id="about-heading">About Us</h2>
+    <p>
+      Aegina Suite Ike offers premier property management services in the Saronic Gulf, providing luxury, comfort, and flawless hospitality tailored for discerning clients and visitors.
+    </p>
+  </section>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r154/three.min.js"></script>
-  <script src="app.js"></script>
+  <!-- Team Section -->
+  <section id="team" class="content-section" tabindex="-1" aria-labelledby="team-heading">
+    <hr class="section-separator" />
+    <h2 id="team-heading">Our Team</h2>
+    <div class="team-grid">
+      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="panagiotis-bio">
+        <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
+        <p class="team-role">CEO & Co-Founder</p>
+        <div id="panagiotis-bio" class="team-bio">
+          <p>Panagiotis brings 15+ years of luxury property management experience with a focus on client satisfaction and operational excellence.</p>
+        </div>
+      </article>
+
+      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="christina-bio">
+        <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
+        <p class="team-role">COO & Co-Founder</p>
+        <div id="christina-bio" class="team-bio">
+          <p>Christina oversees day-to-day operations ensuring seamless service delivery and innovative guest experiences.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- Report Section -->
+  <section id="report" class="content-section" tabindex="-1" aria-labelledby="report-heading">
+    <hr class="section-separator" />
+    <h2 id="report-heading">Annual Earnings Report</h2>
+    <a href="assets/AeginaSuiteIke_AnnualReport2024.pdf" download class="btn-primary" aria-label="Download Annual Earnings Report">
+      Download Report
+    </a>
+  </section>
+
+  <script src="app.js" defer></script>
 </body>
 </html>
+
